Рефакторинг, корректное отображение ошибок